syntax = "proto3";
package pb.socket;

// 测试spring消息连通
message HelloSpringMsg {
  string name = 1;

}

// 用户信息响应
message UserInfo {
  // id
  int64 id = 1;
  // 用户昵称
  string name = 2;
  // jwt
  string jwt = 3;

}

// 对外服数据协议包装
message ExternalMessage {
  // 请求命令类型: 0 心跳，1 业务
  int32 cmdCode = 1;
  // 协议开关，用于一些协议级别的开关控制，比如 安全加密校验等。 : 0 不校验
  int32 protocolSwitch = 2;
  // 业务路由（高16为主, 低16为子）
  int32 cmdMerge = 3;
  // 响应码。
  int32 responseStatus = 4;
  // 验证信息
  string validMsg = 5;
  bytes data = 6;

}

// 用户登录请求
message UserLogin {
  // 用户名
  string username = 1;
  // 密码
  string password = 2;

}

